Fix min cover height so as not to cut off content

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -41,7 +41,7 @@ body, html {
 
 .vertical-center {
   position: relative;
-  top: 50vh;
+  top: 50%;
   transform: translateY(-50%);
 }
 .cover {
@@ -294,7 +294,8 @@ input:focus {
   background-size: cover;
   background-image: url('boards_bg_faded2.jpg');
   background-attachment: fixed;
-  height: 100vh;
+  min-height: 100vh;
+  height: 40em;
 }
 .navigation {
   background-color: white;
